--- a/react/package.json
+++ b/react/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.0.7",
+    "vazirmatn": "^33.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
