--- a/react/package.json
+++ b/react/package.json
@@ -10,10 +10,12 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^1.9.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.46.1",
         "react-icons": "^4.10.1",
+        "react-redux": "^8.1.2",
         "react-router-dom": "^6.16.0",
         "styled-components": "^6.0.7",
         "vazirmatn": "^33.0.3"
