--- a/react/package.json
+++ b/react/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@hookform/resolvers": "^3.3.1",
         "@reduxjs/toolkit": "^1.9.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -18,7 +19,8 @@
         "react-redux": "^8.1.2",
         "react-router-dom": "^6.16.0",
         "styled-components": "^6.0.7",
-        "vazirmatn": "^33.0.3"
+        "vazirmatn": "^33.0.3",
+        "yup": "^1.2.0"
     },
     "devDependencies": {
         "@types/react": "^18.2.15",
