--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -1,4 +1,9 @@
 asgiref==3.7.2
+attrs==23.1.0
+certifi==2023.7.22
+charset-normalizer==3.2.0
+coreapi==2.3.3
+coreschema==0.0.4
 Django==4.2.4
 django-cors-headers==4.2.0
 django-dotenv==1.4.2
@@ -6,9 +11,28 @@ django-filter==23.2
 django-rest-authtoken==2.1.4
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
+drf-spectacular==0.26.4
+drf-spectacular-sidecar==2023.9.1
+idna==3.4
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.2
+jsonschema==4.19.0
+jsonschema-specifications==2023.7.1
+MarkupSafe==2.1.3
+openapi-codec==1.3.2
+packaging==23.1
 PyJWT==2.8.0
 python-dotenv==1.0.0
 pytz==2023.3
+PyYAML==6.0.1
+referencing==0.30.2
+requests==2.31.0
+rpds-py==0.10.3
+secure-smtplib==0.1.1
+simplejson==3.19.1
 sqlparse==0.4.4
 typing_extensions==4.7.1
 tzdata==2023.3
+uritemplate==4.1.1
+urllib3==2.0.4
