--- a/react/package.json
+++ b/react/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@hookform/resolvers": "^3.3.1",
         "@reduxjs/toolkit": "^1.9.5",
+        "date-fns": "^2.30.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.46.1",
