--- a/react/package.json
+++ b/react/package.json
@@ -12,6 +12,8 @@
     "dependencies": {
         "@hookform/resolvers": "^3.3.1",
         "@reduxjs/toolkit": "^1.9.5",
+        "@tanstack/react-query": "^4.35.3",
+        "@tanstack/react-query-devtools": "^4.35.3",
         "date-fns": "^2.30.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -19,6 +21,7 @@
         "react-icons": "^4.10.1",
         "react-redux": "^8.1.2",
         "react-router-dom": "^6.16.0",
+        "react-spinners": "^0.13.8",
         "styled-components": "^6.0.7",
         "vazirmatn": "^33.0.3",
         "yup": "^1.2.0"
